# TAISP_Reminder

./: .gitignore  README.md  TODO.md  bot.py  config.py  database.py  models.py  pyproject.toml  requirements.txt  scheduler.py  vercel.json
api/: index.py
handlers/: deadlines.py  debug.py  list_cmd.py  misc.py  modules.py
